fragment_add_item  + change activity
Create the fragment add_item (not completed). Added the possibility to change activities with the opportunity button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:theme="@style/Theme.CasHelper"
         tools:targetApi="31">
         <activity
-            android:name=".IncomingActivity"
+            android:name=".ui.IncomingActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.AdapterFragmentAddItem"
+            android:exported="false" />
+        <activity
+            android:name="MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
